changed names and classes

--- a/index.html
+++ b/index.html
@@ -14,25 +14,25 @@
         <header class="titleAndPicture">
             <div class="titleAndDescription">
                 <h1 class="title">Jorge Ossa</h1>
-                <h2 class="titleDescription gradiantBG">Frontend developer and Visual designer</h2>
-                <p class="headerDescription px10">A passionate designer and web developer, solving problems, and detail
+                <h2 class="title__description text--gradiant">Frontend developer and Visual designer</h2>
+                <p class="header__description text--10px">A passionate designer and web developer, solving problems, and detail
                     attention oriented.</p>
                 <div class="socialMediaBox">
-                    <a class="email ">
-                        <img src="img/ant-design-mail-outlined.svg" alt="email icon" class="emailImg">
-                        <p class="emailText px9">jorgehossa@gmail.com</p>
+                    <a class="email">
+                        <img src="img/ant-design-mail-outlined.svg" alt="email icon" class="email__img">
+                        <p class="email__text text--9px">jorgehossa@gmail.com</p>
                     </a>
                     <a class="linkedin">
-                        <img src="img/ant-design-linkedin-outlined.svg" alt="" class="linkedinImg">
-                        <p class="linkedinText px9">jorgehossa</p>
+                        <img src="img/ant-design-linkedin-outlined.svg" alt="" class="linkedin__img">
+                        <p class="linkedin__text text--9px">jorgehossa</p>
                     </a>
                     <a class="github">
-                        <img src="img/ant-design-github-filled.svg" alt="email icon" class="githubImg">
-                        <p class="githubText px9">georgehossa</p>
+                        <img src="img/ant-design-github-filled.svg" alt="email icon" class="github__img">
+                        <p class="github__text text--9px">georgehossa</p>
                     </a>
                     <a class="dribble">
-                        <img src="img/ant-design-dribbble-outlined.svg" alt="" class="dribbleImg">
-                        <p class="dribbleText px9">georgehossa</p>
+                        <img src="img/ant-design-dribbble-outlined.svg" alt="" class="dribble__img">
+                        <p class="dribble__text text--9px">georgehossa</p>
                     </a>
                 </div>
             </div>
@@ -45,11 +45,11 @@
         <section class="mainDescription">
             <div class="leftSideContent">
                 <div class="card">
-                    <h3 class="sectionTitle px12 boldBlackText">Experience</h3>
-                    <h4 class="gradiantBG px9">Sep. 2017 - Currently</h4>
-                    <span class="boldGrayText px10">Web developer</span>
-                    <span class="grayText px10">Julius2Grow</span>
-                    <p class="cardDescription px9">- Help to administrate and maintain client's websites.<br>
+                    <h3 class="sectionTitle text--12px text--bold">Experience</h3>
+                    <h4 class="text--gradiant text--9px">Sep. 2017 - Currently</h4>
+                    <span class="text--boldGray text--10px">Web developer</span>
+                    <span class="text--gray text--10px">Julius2Grow</span>
+                    <p class="card__description text--9px">- Help to administrate and maintain client's websites.<br>
                         - Administrate client web site implementing different solutions according to client<br> needs
                         using
                         CMS's tools, HTML, CSS, and Javascript.</p>
@@ -57,45 +57,45 @@
                 </div>
 
                 <div class="card">
-                    <h4 class="gradiantBG px9">Dec. 2016 - Sep. 2017</h4>
-                    <span class="boldGrayText px10">Creative director and SEM manager</span>
-                    <span class="grayText px10">Asimagen Comunicaciones</span>
-                    <p class="cardDescription px9">- Admin clients SEM accounts on Facebook and Instagram.<br>
+                    <h4 class="text--gradiant text--9px">Dec. 2016 - Sep. 2017</h4>
+                    <span class="text--boldGray text--10px">Creative director and SEM manager</span>
+                    <span class="text--gray text--10px">Asimagen Comunicaciones</span>
+                    <p class="card__description text--9px">- Admin clients SEM accounts on Facebook and Instagram.<br>
                         - Design monthly key visuals for social media campaigns.</p>
                     <hr>
                 </div>
 
                 <div class="card">
-                    <h4 class="gradiantBG px9">Jul. 2016 - Dec. 2016</h4>
-                    <span class="boldGrayText px10">Digital marketing manager and designer</span>
-                    <span class="grayText px10">Altotrafico</span>
-                    <p class="cardDescription px9">- Admin clients SEM accounts on Facebook and Instagram.<br>
+                    <h4 class="text--gradiant text--9px">Jul. 2016 - Dec. 2016</h4>
+                    <span class="text--boldGray text--10px">Digital marketing manager and designer</span>
+                    <span class="text--gray text--10px">Altotrafico</span>
+                    <p class="card__description text--9px">- Admin clients SEM accounts on Facebook and Instagram.<br>
                         - Design and administrate social media accounts and campaigns.</p>
                     <hr>
                 </div>
 
                 <div class="card">
-                    <h4 class="gradiantBG px9">Jul. 2015 - Jun. 2016</h4>
-                    <span class="boldGrayText px10">Web designer</span>
-                    <span class="grayText px10">Nuclear Agencia Digital</span>
-                    <p class="cardDescription px9">- Admin clients SEM accounts on Facebook and Instagram.<br>
+                    <h4 class="text--gradiant text--9px">Jul. 2015 - Jun. 2016</h4>
+                    <span class="text--boldGray text--10px">Web designer</span>
+                    <span class="text--gray text--10px">Nuclear Agencia Digital</span>
+                    <p class="card__description text--9px">- Admin clients SEM accounts on Facebook and Instagram.<br>
                         - Design and administrate social media accounts and campaigns.</p>
                     <hr>
                 </div>
 
                 <div class="card">
-                    <h4 class="gradiantBG px9">Sep. 2013 - Jul. 2015</h4>
-                    <span class="boldGrayText px10">Graphic designer</span>
-                    <span class="grayText px10">Asimagen Comunicaciones</span>
-                    <p class="cardDescription px9">- Design and administrate social media accounts and campaigns.</p>
+                    <h4 class="text--gradiant text--9px">Sep. 2013 - Jul. 2015</h4>
+                    <span class="text--boldGray text--10px">Graphic designer</span>
+                    <span class="text--gray text--10px">Asimagen Comunicaciones</span>
+                    <p class="card__description text--9px">- Design and administrate social media accounts and campaigns.</p>
                     <hr>
                 </div>
 
                 <div class="card">
-                    <h4 class="gradiantBG px9">Jun. 2005 - Sep. 2013</h4>
-                    <span class="boldGrayText px10">Graphic designer</span>
-                    <span class="grayText px10">Corporación Industrial Minuto de Dios</span>
-                    <p class="cardDescription px9">- Design and maintain the brand, adapt it to company diferents
+                    <h4 class="text--gradiant text--9px">Jun. 2005 - Sep. 2013</h4>
+                    <span class="text--boldGray text--10px">Graphic designer</span>
+                    <span class="text--gray text--10px">Corporación Industrial Minuto de Dios</span>
+                    <p class="card__description text--9px">- Design and maintain the brand, adapt it to company diferents
                         channels and <br>campaigns.<br>
                         - Design and develop web site of the company.</p>
                     <hr>
@@ -104,45 +104,45 @@
 
             <div class="rightSideContent">
                 <div class="card">
-                    <h3 class="sectionTitle px12 boldBlackText">Skills</h3>
-                    <p class="cardDescription px9">Javascript - ReactJs - HTML - CSS - SASS - BEM - Git -<br>Github -
+                    <h3 class="sectionTitle text--12px text--bold">Skills</h3>
+                    <p class="card__description text--9px">Javascript - ReactJs - HTML - CSS - SASS - BEM - Git -<br>Github -
                         Webpack - Styled Components - Redux - UI design - Figma - Graphic design.</p>
                 </div>
 
                 <div class="card">
-                    <h3 class="sectionTitle px12 boldBlackText paddingTitle">Formation</h3>
-                    <h4 class="gradiantBG px9">2020 - 2023</h4>
-                    <p class="boldGrayText px10">Platzi Master - Frontend Developer</p>
-                    <p class="grayText px10 paddingGrayText">Platzi</p>
+                    <h3 class="sectionTitle text--12px text--bold title--padding">Formation</h3>
+                    <h4 class="text--gradiant text--9px">2020 - 2023</h4>
+                    <p class="text--boldGray text--10px">Platzi Master - Frontend Developer</p>
+                    <p class="text--gray text--10px GrayText--padding">Platzi</p>
                     <hr>
                 </div>
 
                 <div class="card">
-                    <h4 class="gradiantBG px9">2004 - 2009</h4>
-                    <p class="boldGrayText px10">Labor Technician in Digital Graphic Design<br>Skills</p>
-                    <p class="grayText px10 paddingGrayText">CESDE</p>
+                    <h4 class="text--gradiant text--9px">2004 - 2009</h4>
+                    <p class="text--boldGray text--10px">Labor Technician in Digital Graphic Design<br>Skills</p>
+                    <p class="text--gray text--10px GrayText--padding">CESDE</p>
                     <hr>
                 </div>
 
                 <div class="card">
-                    <h3 class="sectionTitle px12 boldBlackText paddingTitle">Language</h3>
-                    <p class="cardDescription px9">Spanish (Native)<br>
+                    <h3 class="sectionTitle text--12px text--bold title--padding">Language</h3>
+                    <p class="card__description text--9px">Spanish (Native)<br>
                         English (Limited working proficiency)</p>
                 </div>
 
                 <div class="card">
-                    <h3 class="sectionTitle px12 boldBlackText paddingTitle">Projects</h3>
+                    <h3 class="sectionTitle text--12px text--bold title--padding">Projects</h3>
                     <a class="descriptionLinks">
-                        <p class="boldBlackText px10">Hope-Tracker</p>
+                        <p class="text--bold text--10px">Hope-Tracker</p>
                         <img src="img/ant-design-link-outlined.svg" alt="">
                     </a>
-                    <p class="cardDescription px9">COVID app focused on recover cases per country.<br>
+                    <p class="card__description text--9px">COVID app focused on recover cases per country.<br>
                         React, React-Router, Github, Figma, React Chart.</p>
                     <a class="descriptionLinks">
-                        <p class="boldBlackText px10 paddingLinkDescription">Simple Weather Card App</p>
+                        <p class="text--bold text--10px paddingLinkDescription">Simple Weather Card App</p>
                         <img src="img/ant-design-link-outlined.svg" alt="">
                     </a>
-                    <p class="cardDescription px9">Simple weather card store the last city search.<br>
+                    <p class="card__description text--9px">Simple weather card store the last city search.<br>
                         Javascript, OOP, SASS, HTML, Webpack, Netlify.</p>
                 </div>
         </section>
