formated the code

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
             <div class="titleAndDescription">
                 <h1 class="title">Jorge Ossa</h1>
                 <h2 class="title__description text--gradiant">Frontend developer and Visual designer</h2>
-                <p class="header__description text--10px">A passionate designer and web developer, solving problems, and detail
+                <p class="header__description text--10px">A passionate designer and web developer, solving problems, and
+                    detail
                     attention oriented.</p>
                 <div class="socialMediaBox">
                     <a class="email">
@@ -87,7 +88,8 @@
                     <h4 class="text--gradiant text--9px">Sep. 2013 - Jul. 2015</h4>
                     <span class="text--boldGray text--10px">Graphic designer</span>
                     <span class="text--gray text--10px">Asimagen Comunicaciones</span>
-                    <p class="card__description text--9px">- Design and administrate social media accounts and campaigns.</p>
+                    <p class="card__description text--9px">- Design and administrate social media accounts and
+                        campaigns.</p>
                     <hr>
                 </div>
 
@@ -95,7 +97,8 @@
                     <h4 class="text--gradiant text--9px">Jun. 2005 - Sep. 2013</h4>
                     <span class="text--boldGray text--10px">Graphic designer</span>
                     <span class="text--gray text--10px">Corporación Industrial Minuto de Dios</span>
-                    <p class="card__description text--9px">- Design and maintain the brand, adapt it to company diferents
+                    <p class="card__description text--9px">- Design and maintain the brand, adapt it to company
+                        diferents
                         channels and <br>campaigns.<br>
                         - Design and develop web site of the company.</p>
                     <hr>
@@ -105,7 +108,8 @@
             <div class="rightSideContent">
                 <div class="card">
                     <h3 class="sectionTitle text--12px text--bold">Skills</h3>
-                    <p class="card__description text--9px">Javascript - ReactJs - HTML - CSS - SASS - BEM - Git -<br>Github -
+                    <p class="card__description text--9px">Javascript - ReactJs - HTML - CSS - SASS - BEM - Git
+                        -<br>Github -
                         Webpack - Styled Components - Redux - UI design - Figma - Graphic design.</p>
                 </div>
 
