--- a/index.html
+++ b/index.html
@@ -11,29 +11,29 @@
 
 <body>
     <div class="base">
-        <header class="titleAndPicture">
-            <div class="titleAndDescription">
+        <header class="hero">
+            <div class="hero__text">
                 <h1 class="title">Jorge Ossa</h1>
                 <h2 class="title__description text--gradiant">Frontend developer and Visual designer</h2>
-                <p class="header__description text--10px">A passionate designer and web developer, solving problems, and
+                <p class="header__description m">A passionate designer and web developer, solving problems, and
                     detail
                     attention oriented.</p>
                 <div class="socialMediaBox">
                     <a class="email">
                         <img src="img/ant-design-mail-outlined.svg" alt="email icon" class="email__img">
-                        <p class="email__text text--9px">jorgehossa@gmail.com</p>
+                        <p class="email__text s">jorgehossa@gmail.com</p>
                     </a>
                     <a class="linkedin">
-                        <img src="img/ant-design-linkedin-outlined.svg" alt="" class="linkedin__img">
-                        <p class="linkedin__text text--9px">jorgehossa</p>
+                        <img src="img/ant-design-linkedin-outlined.svg" alt="linkedin icon" class="linkedin__img">
+                        <p class="linkedin__text s">jorgehossa</p>
                     </a>
                     <a class="github">
-                        <img src="img/ant-design-github-filled.svg" alt="email icon" class="github__img">
-                        <p class="github__text text--9px">georgehossa</p>
+                        <img src="img/ant-design-github-filled.svg" alt="github icon" class="github__img">
+                        <p class="github__text s">georgehossa</p>
                     </a>
                     <a class="dribble">
-                        <img src="img/ant-design-dribbble-outlined.svg" alt="" class="dribble__img">
-                        <p class="dribble__text text--9px">georgehossa</p>
+                        <img src="img/ant-design-dribbble-outlined.svg" alt="dribble icon" class="dribble__img">
+                        <p class="dribble__text s">georgehossa</p>
                     </a>
                 </div>
             </div>
@@ -44,109 +44,107 @@
         </header>
 
         <section class="mainDescription">
-            <div class="leftSideContent">
+            <div class="experience">
                 <div class="card">
-                    <h3 class="sectionTitle text--12px text--bold">Experience</h3>
-                    <h4 class="text--gradiant text--9px">Sep. 2017 - Currently</h4>
-                    <span class="text--boldGray text--10px">Web developer</span>
-                    <span class="text--gray text--10px">Julius2Grow</span>
-                    <p class="card__description text--9px">- Help to administrate and maintain client's websites.<br>
-                        - Administrate client web site implementing different solutions according to client<br> needs
-                        using
-                        CMS's tools, HTML, CSS, and Javascript.</p>
+                    <h3 class="sectionTitle xl text--bold">Experience</h3>
+                    <h4 class="text--gradiant s">Sep. 2017 - Currently</h4>
+                    <span class="text--boldGray m">Web developer</span>
+                    <span class="text--gray m">Julius2Grow</span>
+                    <p class="card__description s">- Help to administrate and maintain client's websites.</p>
+                    <p class="card__description s"> - Administrate client web site implementing different
+                        solutions according to client needs using CMS's tools, HTML, CSS, and Javascript.</p>
                     <hr>
                 </div>
 
                 <div class="card">
-                    <h4 class="text--gradiant text--9px">Dec. 2016 - Sep. 2017</h4>
-                    <span class="text--boldGray text--10px">Creative director and SEM manager</span>
-                    <span class="text--gray text--10px">Asimagen Comunicaciones</span>
-                    <p class="card__description text--9px">- Admin clients SEM accounts on Facebook and Instagram.<br>
-                        - Design monthly key visuals for social media campaigns.</p>
+                    <h4 class="text--gradiant s">Dec. 2016 - Sep. 2017</h4>
+                    <span class="text--boldGray m">Creative director and SEM manager</span>
+                    <span class="text--gray m">Asimagen Comunicaciones</span>
+                    <p class="card__description s">- Admin clients SEM accounts on Facebook and Instagram.</p>
+                    <p class="card__description s">- Design monthly key visuals for social media campaigns.</p>
                     <hr>
                 </div>
 
                 <div class="card">
-                    <h4 class="text--gradiant text--9px">Jul. 2016 - Dec. 2016</h4>
-                    <span class="text--boldGray text--10px">Digital marketing manager and designer</span>
-                    <span class="text--gray text--10px">Altotrafico</span>
-                    <p class="card__description text--9px">- Admin clients SEM accounts on Facebook and Instagram.<br>
-                        - Design and administrate social media accounts and campaigns.</p>
+                    <h4 class="text--gradiant s">Jul. 2016 - Dec. 2016</h4>
+                    <span class="text--boldGray m">Digital marketing manager and designer</span>
+                    <span class="text--gray m">Altotrafico</span>
+                    <p class="card__description s">- Admin clients SEM accounts on Facebook and Instagram.</p>
+                    <p class="card__description s">- Design and administrate social media accounts and campaigns.</p>
                     <hr>
                 </div>
 
                 <div class="card">
-                    <h4 class="text--gradiant text--9px">Jul. 2015 - Jun. 2016</h4>
-                    <span class="text--boldGray text--10px">Web designer</span>
-                    <span class="text--gray text--10px">Nuclear Agencia Digital</span>
-                    <p class="card__description text--9px">- Admin clients SEM accounts on Facebook and Instagram.<br>
-                        - Design and administrate social media accounts and campaigns.</p>
+                    <h4 class="text--gradiant s">Jul. 2015 - Jun. 2016</h4>
+                    <span class="text--boldGray m">Web designer</span>
+                    <span class="text--gray m">Nuclear Agencia Digital</span>
+                    <p class="card__description s">- Admin clients SEM accounts on Facebook and Instagram.</p>
+                    <p class="card__description s">- Design and administrate social media accounts and campaigns.</p>
                     <hr>
                 </div>
 
                 <div class="card">
-                    <h4 class="text--gradiant text--9px">Sep. 2013 - Jul. 2015</h4>
-                    <span class="text--boldGray text--10px">Graphic designer</span>
-                    <span class="text--gray text--10px">Asimagen Comunicaciones</span>
-                    <p class="card__description text--9px">- Design and administrate social media accounts and
+                    <h4 class="text--gradiant s">Sep. 2013 - Jul. 2015</h4>
+                    <span class="text--boldGray m">Graphic designer</span>
+                    <span class="text--gray m">Asimagen Comunicaciones</span>
+                    <p class="card__description s">- Design and administrate social media accounts and
                         campaigns.</p>
                     <hr>
                 </div>
 
                 <div class="card">
-                    <h4 class="text--gradiant text--9px">Jun. 2005 - Sep. 2013</h4>
-                    <span class="text--boldGray text--10px">Graphic designer</span>
-                    <span class="text--gray text--10px">Corporación Industrial Minuto de Dios</span>
-                    <p class="card__description text--9px">- Design and maintain the brand, adapt it to company
-                        diferents
-                        channels and <br>campaigns.<br>
-                        - Design and develop web site of the company.</p>
+                    <h4 class="text--gradiant s">Jun. 2005 - Sep. 2013</h4>
+                    <span class="text--boldGray m">Graphic designer</span>
+                    <span class="text--gray m">Corporación Industrial Minuto de Dios</span>
+                    <p class="card__description s">- Design and maintain the brand, adapt it to company
+                        diferents channels and campaigns.</p>
+                    <p class="card__description s">- Design and develop web site of the company.</p>
                     <hr>
                 </div>
             </div>
 
             <div class="rightSideContent">
                 <div class="card">
-                    <h3 class="sectionTitle text--12px text--bold">Skills</h3>
-                    <p class="card__description text--9px">Javascript - ReactJs - HTML - CSS - SASS - BEM - Git
-                        -<br>Github -
+                    <h3 class="sectionTitle xl text--bold">Skills</h3>
+                    <p class="card__description s">Javascript - ReactJs - HTML - CSS - SASS - BEM - Git
+                        -Github -
                         Webpack - Styled Components - Redux - UI design - Figma - Graphic design.</p>
                 </div>
 
                 <div class="card">
-                    <h3 class="sectionTitle text--12px text--bold title--padding">Formation</h3>
-                    <h4 class="text--gradiant text--9px">2020 - 2023</h4>
-                    <p class="text--boldGray text--10px">Platzi Master - Frontend Developer</p>
-                    <p class="text--gray text--10px GrayText--padding">Platzi</p>
+                    <h3 class="sectionTitle xl text--bold title--margin">Formation</h3>
+                    <h4 class="text--gradiant s">2020 - 2023</h4>
+                    <p class="text--boldGray m">Platzi Master - Frontend Developer</p>
+                    <p class="text--gray m GrayText--margin">Platzi</p>
                     <hr>
                 </div>
 
                 <div class="card">
-                    <h4 class="text--gradiant text--9px">2004 - 2009</h4>
-                    <p class="text--boldGray text--10px">Labor Technician in Digital Graphic Design<br>Skills</p>
-                    <p class="text--gray text--10px GrayText--padding">CESDE</p>
+                    <h4 class="text--gradiant s">2004 - 2009</h4>
+                    <p class="text--boldGray m">Labor Technician in Digital Graphic Design Skills</p>
+                    <p class="text--gray m GrayText--margin">CESDE</p>
                     <hr>
                 </div>
 
                 <div class="card">
-                    <h3 class="sectionTitle text--12px text--bold title--padding">Language</h3>
-                    <p class="card__description text--9px">Spanish (Native)<br>
+                    <h3 class="sectionTitle xl text--bold title--margin">Language</h3>
+                    <p class="card__description s">Spanish (Native)<br>
                         English (Limited working proficiency)</p>
                 </div>
 
                 <div class="card">
-                    <h3 class="sectionTitle text--12px text--bold title--padding">Projects</h3>
+                    <h3 class="sectionTitle xl text--bold title--margin">Projects</h3>
                     <a class="descriptionLinks">
-                        <p class="text--bold text--10px">Hope-Tracker</p>
+                        <p class="text--bold m">Hope-Tracker</p>
                         <img src="img/ant-design-link-outlined.svg" alt="">
                     </a>
-                    <p class="card__description text--9px">COVID app focused on recover cases per country.<br>
+                    <p class="card__description s">COVID app focused on recover cases per country.<br>
                         React, React-Router, Github, Figma, React Chart.</p>
                     <a class="descriptionLinks">
-                        <p class="text--bold text--10px paddingLinkDescription">Simple Weather Card App</p>
+                        <p class="text--bold m marginLinkDescription">Simple Weather Card App</p>
                         <img src="img/ant-design-link-outlined.svg" alt="">
                     </a>
-                    <p class="card__description text--9px">Simple weather card store the last city search.<br>
+                    <p class="card__description s">Simple weather card store the last city search.<br>
                         Javascript, OOP, SASS, HTML, Webpack, Netlify.</p>
                 </div>
         </section>
