--- a/index.html
+++ b/index.html
@@ -45,73 +45,73 @@
 
         <section class="mainDescription">
             <div class="experience">
-                <div class="card">
+                <div class="contentBox">
                     <h3 class="sectionTitle xl text--bold">Experience</h3>
                     <h4 class="text--gradiant s">Sep. 2017 - Currently</h4>
                     <span class="text--boldGray m">Web developer</span>
                     <span class="text--gray m">Julius2Grow</span>
-                    <p class="card__description s">- Help to administrate and maintain client's websites.</p>
-                    <p class="card__description s"> - Administrate client web site implementing different
+                    <p class="contentBox__description s">- Help to administrate and maintain client's websites.</p>
+                    <p class="contentBox__description s"> - Administrate client web site implementing different
                         solutions according to client needs using CMS's tools, HTML, CSS, and Javascript.</p>
                     <hr>
                 </div>
 
-                <div class="card">
+                <div class="contentBox">
                     <h4 class="text--gradiant s">Dec. 2016 - Sep. 2017</h4>
                     <span class="text--boldGray m">Creative director and SEM manager</span>
                     <span class="text--gray m">Asimagen Comunicaciones</span>
-                    <p class="card__description s">- Admin clients SEM accounts on Facebook and Instagram.</p>
-                    <p class="card__description s">- Design monthly key visuals for social media campaigns.</p>
+                    <p class="contentBox__description s">- Admin clients SEM accounts on Facebook and Instagram.</p>
+                    <p class="contentBox__description s">- Design monthly key visuals for social media campaigns.</p>
                     <hr>
                 </div>
 
-                <div class="card">
+                <div class="contentBox">
                     <h4 class="text--gradiant s">Jul. 2016 - Dec. 2016</h4>
                     <span class="text--boldGray m">Digital marketing manager and designer</span>
                     <span class="text--gray m">Altotrafico</span>
-                    <p class="card__description s">- Admin clients SEM accounts on Facebook and Instagram.</p>
-                    <p class="card__description s">- Design and administrate social media accounts and campaigns.</p>
+                    <p class="contentBox__description s">- Admin clients SEM accounts on Facebook and Instagram.</p>
+                    <p class="contentBox__description s">- Design and administrate social media accounts and campaigns.</p>
                     <hr>
                 </div>
 
-                <div class="card">
+                <div class="contentBox">
                     <h4 class="text--gradiant s">Jul. 2015 - Jun. 2016</h4>
                     <span class="text--boldGray m">Web designer</span>
                     <span class="text--gray m">Nuclear Agencia Digital</span>
-                    <p class="card__description s">- Admin clients SEM accounts on Facebook and Instagram.</p>
-                    <p class="card__description s">- Design and administrate social media accounts and campaigns.</p>
+                    <p class="contentBox__description s">- Admin clients SEM accounts on Facebook and Instagram.</p>
+                    <p class="contentBox__description s">- Design and administrate social media accounts and campaigns.</p>
                     <hr>
                 </div>
 
-                <div class="card">
+                <div class="contentBox">
                     <h4 class="text--gradiant s">Sep. 2013 - Jul. 2015</h4>
                     <span class="text--boldGray m">Graphic designer</span>
                     <span class="text--gray m">Asimagen Comunicaciones</span>
-                    <p class="card__description s">- Design and administrate social media accounts and
+                    <p class="contentBox__description s">- Design and administrate social media accounts and
                         campaigns.</p>
                     <hr>
                 </div>
 
-                <div class="card">
+                <div class="contentBox">
                     <h4 class="text--gradiant s">Jun. 2005 - Sep. 2013</h4>
                     <span class="text--boldGray m">Graphic designer</span>
                     <span class="text--gray m">Corporación Industrial Minuto de Dios</span>
-                    <p class="card__description s">- Design and maintain the brand, adapt it to company
+                    <p class="contentBox__description s">- Design and maintain the brand, adapt it to company
                         diferents channels and campaigns.</p>
-                    <p class="card__description s">- Design and develop web site of the company.</p>
+                    <p class="contentBox__description s">- Design and develop web site of the company.</p>
                     <hr>
                 </div>
             </div>
 
             <div class="rightSideContent">
-                <div class="card">
+                <div class="contentBox">
                     <h3 class="sectionTitle xl text--bold">Skills</h3>
-                    <p class="card__description s">Javascript - ReactJs - HTML - CSS - SASS - BEM - Git
+                    <p class="contentBox__description s">Javascript - ReactJs - HTML - CSS - SASS - BEM - Git
                         -Github -
                         Webpack - Styled Components - Redux - UI design - Figma - Graphic design.</p>
                 </div>
 
-                <div class="card">
+                <div class="contentBox">
                     <h3 class="sectionTitle xl text--bold title--margin">Formation</h3>
                     <h4 class="text--gradiant s">2020 - 2023</h4>
                     <p class="text--boldGray m">Platzi Master - Frontend Developer</p>
@@ -119,32 +119,32 @@
                     <hr>
                 </div>
 
-                <div class="card">
+                <div class="contentBox">
                     <h4 class="text--gradiant s">2004 - 2009</h4>
                     <p class="text--boldGray m">Labor Technician in Digital Graphic Design Skills</p>
                     <p class="text--gray m GrayText--margin">CESDE</p>
                     <hr>
                 </div>
 
-                <div class="card">
+                <div class="contentBox">
                     <h3 class="sectionTitle xl text--bold title--margin">Language</h3>
-                    <p class="card__description s">Spanish (Native)<br>
+                    <p class="contentBox__description s">Spanish (Native)<br>
                         English (Limited working proficiency)</p>
                 </div>
 
-                <div class="card">
+                <div class="contentBox">
                     <h3 class="sectionTitle xl text--bold title--margin">Projects</h3>
                     <a class="descriptionLinks">
                         <p class="text--bold m">Hope-Tracker</p>
                         <img src="img/ant-design-link-outlined.svg" alt="">
                     </a>
-                    <p class="card__description s">COVID app focused on recover cases per country.<br>
+                    <p class="contentBox__description s">COVID app focused on recover cases per country.<br>
                         React, React-Router, Github, Figma, React Chart.</p>
                     <a class="descriptionLinks">
-                        <p class="text--bold m marginLinkDescription">Simple Weather Card App</p>
+                        <p class="text--bold m marginLinkDescription">Simple Weather contentBox App</p>
                         <img src="img/ant-design-link-outlined.svg" alt="">
                     </a>
-                    <p class="card__description s">Simple weather card store the last city search.<br>
+                    <p class="contentBox__description s">Simple weather contentBox store the last city search.<br>
                         Javascript, OOP, SASS, HTML, Webpack, Netlify.</p>
                 </div>
         </section>
