fixed some errors

--- a/index.html
+++ b/index.html
@@ -136,13 +136,13 @@
                     <h3 class="sectionTitle xl text--bold title--margin">Projects</h3>
                     <a class="descriptionLinks">
                         <p class="text--bold m">Hope-Tracker</p>
-                        <img src="img/ant-design-link-outlined.svg" alt="">
+                        <img src="img/ant-design-link-outlined.svg" alt="Hope-Tracker link">
                     </a>
                     <p class="contentBox__description s">COVID app focused on recover cases per country.<br>
                         React, React-Router, Github, Figma, React Chart.</p>
                     <a class="descriptionLinks">
-                        <p class="text--bold m marginLinkDescription">Simple Weather contentBox App</p>
-                        <img src="img/ant-design-link-outlined.svg" alt="">
+                        <p class="text--bold m marginLinkDescription">Simple Weather Card App</p>
+                        <img src="img/ant-design-link-outlined.svg" alt="weather app link">
                     </a>
                     <p class="contentBox__description s">Simple weather contentBox store the last city search.<br>
                         Javascript, OOP, SASS, HTML, Webpack, Netlify.</p>
