formated the code

--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
                 <h1 class="title">Jorge Ossa</h1>
                 <h2 class="title__description text--gradiant">Frontend developer and Visual designer</h2>
                 <p class="header__description m">A passionate designer and web developer, solving problems, and
-                    detail
-                    attention oriented.</p>
+                    detail attention oriented.</p>
                 <div class="socialMediaBox">
                     <a class="email">
                         <img src="img/ant-design-mail-outlined.svg" alt="email icon" class="email__img">
@@ -70,7 +69,8 @@
                     <span class="text--boldGray m">Digital marketing manager and designer</span>
                     <span class="text--gray m">Altotrafico</span>
                     <p class="contentBox__description s">- Admin clients SEM accounts on Facebook and Instagram.</p>
-                    <p class="contentBox__description s">- Design and administrate social media accounts and campaigns.</p>
+                    <p class="contentBox__description s">- Design and administrate social media accounts and campaigns.
+                    </p>
                     <hr>
                 </div>
 
@@ -79,7 +79,8 @@
                     <span class="text--boldGray m">Web designer</span>
                     <span class="text--gray m">Nuclear Agencia Digital</span>
                     <p class="contentBox__description s">- Admin clients SEM accounts on Facebook and Instagram.</p>
-                    <p class="contentBox__description s">- Design and administrate social media accounts and campaigns.</p>
+                    <p class="contentBox__description s">- Design and administrate social media accounts and campaigns.
+                    </p>
                     <hr>
                 </div>
 
