--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                     <h4 class="text--gradiant s">Sep. 2017 - Currently</h4>
                     <span class="text--boldGray m">Web developer</span>
                     <span class="text--gray m">Julius2Grow</span>
-                    <p class="contentBox__description s">- Help to administrate and maintain client's websites.</p>
-                    <p class="contentBox__description s"> - Administrate client web site implementing different
+                    <p class="contentBox__description s p__marginT">- Help to administrate and maintain client's websites.</p>
+                    <p class="contentBox__description s p__marginB"> - Administrate client web site implementing different
                         solutions according to client needs using CMS's tools, HTML, CSS, and Javascript.</p>
                     <hr>
                 </div>
@@ -59,8 +59,8 @@
                     <h4 class="text--gradiant s">Dec. 2016 - Sep. 2017</h4>
                     <span class="text--boldGray m">Creative director and SEM manager</span>
                     <span class="text--gray m">Asimagen Comunicaciones</span>
-                    <p class="contentBox__description s">- Admin clients SEM accounts on Facebook and Instagram.</p>
-                    <p class="contentBox__description s">- Design monthly key visuals for social media campaigns.</p>
+                    <p class="contentBox__description p__marginT s">- Admin clients SEM accounts on Facebook and Instagram.</p>
+                    <p class="contentBox__description p__marginB s">- Design monthly key visuals for social media campaigns.</p>
                     <hr>
                 </div>
 
@@ -68,8 +68,8 @@
                     <h4 class="text--gradiant s">Jul. 2016 - Dec. 2016</h4>
                     <span class="text--boldGray m">Digital marketing manager and designer</span>
                     <span class="text--gray m">Altotrafico</span>
-                    <p class="contentBox__description s">- Admin clients SEM accounts on Facebook and Instagram.</p>
-                    <p class="contentBox__description s">- Design and administrate social media accounts and campaigns.
+                    <p class="contentBox__description p__marginT s">- Admin clients SEM accounts on Facebook and Instagram.</p>
+                    <p class="contentBox__description p__marginB s">- Design and administrate social media accounts and campaigns.
                     </p>
                     <hr>
                 </div>
@@ -78,8 +78,8 @@
                     <h4 class="text--gradiant s">Jul. 2015 - Jun. 2016</h4>
                     <span class="text--boldGray m">Web designer</span>
                     <span class="text--gray m">Nuclear Agencia Digital</span>
-                    <p class="contentBox__description s">- Admin clients SEM accounts on Facebook and Instagram.</p>
-                    <p class="contentBox__description s">- Design and administrate social media accounts and campaigns.
+                    <p class="contentBox__description p__marginT s">- Admin clients SEM accounts on Facebook and Instagram.</p>
+                    <p class="contentBox__description p__marginB s">- Design and administrate social media accounts and campaigns.
                     </p>
                     <hr>
                 </div>
@@ -88,7 +88,7 @@
                     <h4 class="text--gradiant s">Sep. 2013 - Jul. 2015</h4>
                     <span class="text--boldGray m">Graphic designer</span>
                     <span class="text--gray m">Asimagen Comunicaciones</span>
-                    <p class="contentBox__description s">- Design and administrate social media accounts and
+                    <p class="contentBox__description p__marginT p__marginB s">- Design and administrate social media accounts and
                         campaigns.</p>
                     <hr>
                 </div>
@@ -97,9 +97,9 @@
                     <h4 class="text--gradiant s">Jun. 2005 - Sep. 2013</h4>
                     <span class="text--boldGray m">Graphic designer</span>
                     <span class="text--gray m">Corporación Industrial Minuto de Dios</span>
-                    <p class="contentBox__description s">- Design and maintain the brand, adapt it to company
+                    <p class="contentBox__description p__marginT s">- Design and maintain the brand, adapt it to company
                         diferents channels and campaigns.</p>
-                    <p class="contentBox__description s">- Design and develop web site of the company.</p>
+                    <p class="contentBox__description p__marginB s">- Design and develop web site of the company.</p>
                     <hr>
                 </div>
             </div>
