changed another class

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                     <p class="contentBox__description s">COVID app focused on recover cases per country.<br>
                         React, React-Router, Github, Figma, React Chart.</p>
                     <a class="descriptionLinks">
-                        <p class="text--bold m marginLinkDescription">Simple Weather Card App</p>
+                        <p class="text--bold m descriptionLinks__paddingT">Simple Weather Card App</p>
                         <img src="img/ant-design-link-outlined.svg" alt="weather app link">
                     </a>
                     <p class="contentBox__description s">Simple weather contentBox store the last city search.<br>
