removed all the br tags and a font size

--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
 
                 <div class="contentBox">
                     <h3 class="sectionTitle xl text--bold title--margin">Language</h3>
-                    <p class="contentBox__description s">Spanish (Native)<br>
-                        English (Limited working proficiency)</p>
+                    <p class="contentBox__description s">Spanish (Native)</p>
+                    <p class="contentBox__description s">English (Limited working proficiency)</p>
                 </div>
 
                 <div class="contentBox">
@@ -139,13 +139,13 @@
                         <p class="text--bold m">Hope-Tracker</p>
                         <img src="img/ant-design-link-outlined.svg" alt="Hope-Tracker link">
                     </a>
-                    <p class="contentBox__description s">COVID app focused on recover cases per country.<br>
+                    <p class="contentBox__description s">COVID app focused on recover cases per country.
                         React, React-Router, Github, Figma, React Chart.</p>
                     <a class="descriptionLinks">
                         <p class="text--bold m descriptionLinks__paddingT">Simple Weather Card App</p>
                         <img src="img/ant-design-link-outlined.svg" alt="weather app link">
                     </a>
-                    <p class="contentBox__description s">Simple weather contentBox store the last city search.<br>
+                    <p class="contentBox__description s">Simple weather contentBox store the last city search.
                         Javascript, OOP, SASS, HTML, Webpack, Netlify.</p>
                 </div>
         </section>
