cleaned html from classes like p__marginT and removed margin from top links by adding flex properties + a div

--- a/index.html
+++ b/index.html
@@ -22,18 +22,20 @@
                         <img src="img/ant-design-mail-outlined.svg" alt="email icon" class="email__img">
                         <p class="email__text s">jorgehossa@gmail.com</p>
                     </a>
-                    <a class="linkedin">
-                        <img src="img/ant-design-linkedin-outlined.svg" alt="linkedin icon" class="linkedin__img">
-                        <p class="linkedin__text s">jorgehossa</p>
-                    </a>
-                    <a class="github">
-                        <img src="img/ant-design-github-filled.svg" alt="github icon" class="github__img">
-                        <p class="github__text s">georgehossa</p>
-                    </a>
-                    <a class="dribble">
-                        <img src="img/ant-design-dribbble-outlined.svg" alt="dribble icon" class="dribble__img">
-                        <p class="dribble__text s">georgehossa</p>
-                    </a>
+                    <div class="socialMediaBox__secondRow">
+                        <a class="linkedin">
+                            <img src="img/ant-design-linkedin-outlined.svg" alt="linkedin icon" class="linkedin__img">
+                            <p class="linkedin__text s">jorgehossa</p>
+                        </a>
+                        <a class="github">
+                            <img src="img/ant-design-github-filled.svg" alt="github icon" class="github__img">
+                            <p class="github__text s">georgehossa</p>
+                        </a>
+                        <a class="dribble">
+                            <img src="img/ant-design-dribbble-outlined.svg" alt="dribble icon" class="dribble__img">
+                            <p class="dribble__text s">georgehossa</p>
+                        </a>
+                    </div>
                 </div>
             </div>
 
@@ -49,8 +51,8 @@
                     <h4 class="text--gradiant s">Sep. 2017 - Currently</h4>
                     <span class="text--boldGray m">Web developer</span>
                     <span class="text--gray m">Julius2Grow</span>
-                    <p class="contentBox__description s p__marginT">- Help to administrate and maintain client's websites.</p>
-                    <p class="contentBox__description s p__marginB"> - Administrate client web site implementing different
+                    <p class="contentBox__description s">- Help to administrate and maintain client's websites.</p>
+                    <p class="contentBox__description s"> - Administrate client web site implementing different
                         solutions according to client needs using CMS's tools, HTML, CSS, and Javascript.</p>
                     <hr>
                 </div>
@@ -59,8 +61,8 @@
                     <h4 class="text--gradiant s">Dec. 2016 - Sep. 2017</h4>
                     <span class="text--boldGray m">Creative director and SEM manager</span>
                     <span class="text--gray m">Asimagen Comunicaciones</span>
-                    <p class="contentBox__description p__marginT s">- Admin clients SEM accounts on Facebook and Instagram.</p>
-                    <p class="contentBox__description p__marginB s">- Design monthly key visuals for social media campaigns.</p>
+                    <p class="contentBox__description s">- Admin clients SEM accounts on Facebook and Instagram.</p>
+                    <p class="contentBox__description s">- Design monthly key visuals for social media campaigns.</p>
                     <hr>
                 </div>
 
@@ -68,8 +70,8 @@
                     <h4 class="text--gradiant s">Jul. 2016 - Dec. 2016</h4>
                     <span class="text--boldGray m">Digital marketing manager and designer</span>
                     <span class="text--gray m">Altotrafico</span>
-                    <p class="contentBox__description p__marginT s">- Admin clients SEM accounts on Facebook and Instagram.</p>
-                    <p class="contentBox__description p__marginB s">- Design and administrate social media accounts and campaigns.
+                    <p class="contentBox__description s">- Admin clients SEM accounts on Facebook and Instagram.</p>
+                    <p class="contentBox__description s">- Design and administrate social media accounts and campaigns.
                     </p>
                     <hr>
                 </div>
@@ -78,8 +80,8 @@
                     <h4 class="text--gradiant s">Jul. 2015 - Jun. 2016</h4>
                     <span class="text--boldGray m">Web designer</span>
                     <span class="text--gray m">Nuclear Agencia Digital</span>
-                    <p class="contentBox__description p__marginT s">- Admin clients SEM accounts on Facebook and Instagram.</p>
-                    <p class="contentBox__description p__marginB s">- Design and administrate social media accounts and campaigns.
+                    <p class="contentBox__description s">- Admin clients SEM accounts on Facebook and Instagram.</p>
+                    <p class="contentBox__description s">- Design and administrate social media accounts and campaigns.
                     </p>
                     <hr>
                 </div>
@@ -88,7 +90,7 @@
                     <h4 class="text--gradiant s">Sep. 2013 - Jul. 2015</h4>
                     <span class="text--boldGray m">Graphic designer</span>
                     <span class="text--gray m">Asimagen Comunicaciones</span>
-                    <p class="contentBox__description p__marginT p__marginB s">- Design and administrate social media accounts and
+                    <p class="contentBox__description s">- Design and administrate social media accounts and
                         campaigns.</p>
                     <hr>
                 </div>
@@ -97,9 +99,9 @@
                     <h4 class="text--gradiant s">Jun. 2005 - Sep. 2013</h4>
                     <span class="text--boldGray m">Graphic designer</span>
                     <span class="text--gray m">Corporación Industrial Minuto de Dios</span>
-                    <p class="contentBox__description p__marginT s">- Design and maintain the brand, adapt it to company
+                    <p class="contentBox__description s">- Design and maintain the brand, adapt it to company
                         diferents channels and campaigns.</p>
-                    <p class="contentBox__description p__marginB s">- Design and develop web site of the company.</p>
+                    <p class="contentBox__description s">- Design and develop web site of the company.</p>
                     <hr>
                 </div>
             </div>
@@ -142,7 +144,7 @@
                     <p class="contentBox__description s">COVID app focused on recover cases per country.
                         React, React-Router, Github, Figma, React Chart.</p>
                     <a class="descriptionLinks">
-                        <p class="text--bold m descriptionLinks__paddingT">Simple Weather Card App</p>
+                        <p class="text--bold m descriptionLinks__paddingTop">Simple Weather Card App</p>
                         <img src="img/ant-design-link-outlined.svg" alt="weather app link">
                     </a>
                     <p class="contentBox__description s">Simple weather contentBox store the last city search.
