Changed sectionTitle to contectBox__title

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <section class="mainDescription">
             <div class="experience">
                 <div class="contentBox">
-                    <h3 class="sectionTitle xl text--bold">Experience</h3>
+                    <h3 class="contentBox__title xl text--bold">Experience</h3>
                     <h4 class="text--gradiant s">Sep. 2017 - Currently</h4>
                     <span class="text--boldGray m">Web developer</span>
                     <span class="text--gray m">Julius2Grow</span>
@@ -108,14 +108,14 @@
 
             <div class="rightSideContent">
                 <div class="contentBox">
-                    <h3 class="sectionTitle xl text--bold">Skills</h3>
+                    <h3 class="contentBox__title xl text--bold">Skills</h3>
                     <p class="contentBox__description s">Javascript - ReactJs - HTML - CSS - SASS - BEM - Git
                         -Github -
                         Webpack - Styled Components - Redux - UI design - Figma - Graphic design.</p>
                 </div>
 
                 <div class="contentBox">
-                    <h3 class="sectionTitle xl text--bold title--margin">Formation</h3>
+                    <h3 class="contentBox__title xl text--bold title--margin">Formation</h3>
                     <h4 class="text--gradiant s">2020 - 2023</h4>
                     <p class="text--boldGray m">Platzi Master - Frontend Developer</p>
                     <p class="text--gray m GrayText--margin">Platzi</p>
@@ -130,13 +130,13 @@
                 </div>
 
                 <div class="contentBox">
-                    <h3 class="sectionTitle xl text--bold title--margin">Language</h3>
+                    <h3 class="contentBox__title xl text--bold title--margin">Language</h3>
                     <p class="contentBox__description s">Spanish (Native)</p>
                     <p class="contentBox__description s">English (Limited working proficiency)</p>
                 </div>
 
                 <div class="contentBox">
-                    <h3 class="sectionTitle xl text--bold title--margin">Projects</h3>
+                    <h3 class="contentBox__title xl text--bold title--margin">Projects</h3>
                     <a class="descriptionLinks">
                         <p class="text--bold m">Hope-Tracker</p>
                         <img src="img/ant-design-link-outlined.svg" alt="Hope-Tracker link">
